0.2.0-rc2

 * Fixed problem with isIDAutoGenerated if the object was not wrapped in a site
   [tiran]
 
 * Fixed download tab [tiran]
 
 * Made image/file viewable when invoked directly by adding an index_html
   [tiran]
 
 * Replaced tag method of ATImage [tiran]

 * Fixed migration: Migration failed when there was a broken object in a folder
  [tiran]

0.2.0-rc1 - 2004-07-28

 * Removed 'contents' tab and 'add new item' menu from ATTopic [gotcha] 

 * Changed criteria tab to table UI [gotcha]

 * Added message when clicking remove on criteria without selecting first
   [gotcha]

 * Depend on new AT 1.3.0-beta3 release [tiran]

 * Changed ZMI add name of topic related types to 'ATContentTypes Topic' [tiran]

0.2-beta8 - 2004-07-21

 * Fixed validation problem with mx tidy validator and file uploads
   [tiran]
   
 * Changed time range ints in FriendlyDateCriterion to strings [tiran]
 
 * Reenable implicitly addable for ATFavorite [tiran]

 * Added validation for setup of sort order on topics [gotcha]

 * Added getSize, getHeight, getWidth methods and width/height attributes to
   ATImage [tiran].

0.2-beta7 - 2004-06-27

 * Moved around some code from ATFolder to ATContentType [tiran]

 * Fixed problem with index_html in ATBTreeFolder [tiran]

 * Fixed wrong portal type in Members ATBTreeFolder after migration [tiran]

 * Added initializeArchetype() to ATContentType base class and changed it to
   use edit() instead of update() to make invokeFactory compatible with the old
   cmf types syntax.

 * Fixed problem with _getPortalTypeName in initializeArchetype() phase of
   object creation. Before the fix the portal type name was the original type
   name (e.g. ATDocument) because it was changed after the initializeArchetype
   call by the portal types tool. This issue has caused some wired problems with
   LinguaPlone and workflows. [tiran]

 * ATFile file field and ATImage image field are now language independend.